Modified the id tag to be an html5 data tag, because names like 2wire and 3com are not valid id names and certainly is more clear to use HTML5 data tags

--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
-<html>
+<!DOCTYPE html>
   <head>
     <script data-main="js/main" src="js/require.js" type="text/javascript"></script>
   </head>
 
   <body>
-    <h3>RequireJS Test</h3>
+    <h1>RouterPWN</h1>
 
     <hr />
 
+  
+    <h2>3com</h2>
+
     <h3>3com Test Exploit</h3>
-    <button class="exploit-run" id="3com:test">Exploit</button>
+    <button class="exploit-run" data-id="3com:test">Exploit</button>
+
+    <h3>2wire Test Exploit</h3>
+    <button class="exploit-run" data-id="2wire:test1" data-options="{"ip": "192.168.1.254"}">Exploit</button>
+
+
   </body>
 </html>
