--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <script data-main="js/main" src="js/require.js" type="text/javascript"></script>
     <title>RouterPWN 2.0</title>
+    <meta charset="UTF-8" />
 </head>
 
 <body>
